5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1771_1183.log
== TEST (2019-05-30 09:56:53) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
print(s)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:11:32) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(vetor[p]>0):
	if(vetor[p]<0):
		v1=vetor-vetor[p]
	print(v1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:35) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p<size(vetor)):
	if(vetor[p]<0):
		v1=vetor-vetor[p]
	print(v1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:08) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]>0):
		vetor[p]==v1[p1]
	print(v1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:36) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]>0):
		vetor[p]==v1[p1]
print(v1)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:05) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]>0):
		vetor[p]>0==v1[p1]
print(vetor)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:03) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]<0):
		v1=vetor-vetor[p]
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:07) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]<0):
	v1=vetor-vetor[p]
print(v1)	
-- ERROR:
File "XXXX", line 12
    v1=vetor-vetor[p]
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:29) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]<0):
		v1=vetor-vetor[p]
	p=p+1
	v1=vetor-vetor[p]
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:11) 
-- CODE:
from numpy import *
vetor=array(eval(input("vetor: ")))
p=0
p1=0
s=0
while(p<size(vetor)):
	if(vetor[p]>0):
		s=s+1
	p=p+1
while(p1>0):
	if(vetor[p]<0):
		v1=vetor-vetor[p]
	p=p+1
	vetor=vetor-vetor[p]
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
